# Bitcoin_tracker

./: .flake8  .gitignore  .pre-commit-config.yaml  .todo  Makefile  pyproject.toml  readme.md  requirements.txt  zappa_settings.json
.github/workflows/: production.yml
mercado_bitcoin/: apis.py  checkpoint.py  ingestors.py  lambda_function.py  main.py  writers.py  zappa_settings.json
notebooks/: model_adjustment.ipynb
tests/: __init__.py  requirements.txt  test_app.py  test_ingestor.py  test_integration.py
