[tool.poetry]
name = "mercado_bitcoin_lambda"
version = "0.1.0"
description = "Mercado bitcoin data ingestion pipeline"
authors = ["Sébastien Lozano-Forero"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
ratelimit = "^2.2.1"
backoff = "^1.10.0"
boto3 = "^1.24.30"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
