[tool.poetry]
name = "mercado_bitcoin_lambda"
version = "0.1.0"
description = "Mercado bitcoin data ingestion pipeline"
authors = ["Sébastien Lozano-Forero"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
ratelimit = "^2.2.1"
backoff = "^1.10.0"
boto3 = "^1.24.30"
pynamodb = "^5.2.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
zappa = "^0.50.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py38']
line-length = 90
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.github
  | \.circleci
  | \.hg
  | \.mypy_cache
  | \.tox
  | \venv
  | \.venv
  | \.eggs
  | _build
  | buck-out
  | build
  | dist
  | src
  | venv
)/
'''