[tool.poetry]
name = "cripto_lambda"
version = "0.1.0"
description = "Data ingestion pipeline cripto"
authors = ["Sebastien"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
ratelimit = "^2.2.1"
backoff = "^1.10.0"
boto3 = "^1.17.108"
pynamodb = "^5.1.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
zappa = "^0.50.0"
flake8 = "^3.9.2"
pre-commit = "^2.13.0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
